--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <title>Lab 2 Grid</title>
 </head>
 <body>
     <div class="container">
         <header class="header">
-
+            <div class="header__inner">Лабораторная 2 Grid</header>
         </header>
         <main class="main">
             <div class="main__form">
@@ -30,12 +31,44 @@
                     <button class="forma__button">Send</button>
                 </form>
             </div>
-            <div class="main__gallery">
-                asdg
+            <div class="main__gallery gallery">
+                <div class="gallery__warrper1">
+                    <img src="img/cat1.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper2">
+                    <img src="img/cat2.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper3">
+                    <img src="img/cat3.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper4">
+                    <img src="img/cat4.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper5">
+                    <img src="img/cat5.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper6">
+                    <img src="img/cat6.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper7">
+                    <img src="img/cat7.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper8">
+                    <img src="img/cat8.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper9">
+                    <img src="img/cat9.jpg" class="gallery__img">
+                </div>
+                <div class="gallery__warrper10">
+                    <img src="img/cat10.jpg" class="gallery__img">
+                </div>
             </div>
         </main>
         <aside class="sidebar">
-            dfgdfg
+            <div class="sidebar__nav1">Главная</div>
+            <div class="sidebar__nav2">О нас</div>
+            <div class="sidebar__nav3">Контакты</div>
+            <div class="sidebar__nav4">Услуги</div>
         </aside>
         <footer class="footer">
 
